# FantasyFootballAPI

./: .gitignore  README.md  main.py  players.json  pyproject.toml  requirements.txt  todos.json  users.json
app/: config.py  db.py  games.json  main.py
app/lib/: scrape.py
app/models/: Kicking.py  Passing.py  Player.py  Receiving.py  Rushing.py  Team.py  __init__.py  main.js  models.py
app/routes/: __init__.py
app/services/: crawler.py
data/: todos.json
templates/: index.html  todo.html
