[tool.poetry]
name = "fastapidemoapp"
version = "0.1.0"
description = ""
authors = ["Oscar <ocisneros1@csu.fullerton.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlmodel = "^0.0.8"
mysql = "^0.0.3"
aiosqlite = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
